kubernetes/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teritori-dapp-backend
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: teritori-dapp-backend
  template:
    metadata:
      labels:
        app: teritori-dapp-backend
    spec:
      containers:
      - name: teritori-dapp-backend
        image: YOUR_REGISTRY/teritori/teritori-dapp-backend:BACKEND_COMMIT
        securityContext:
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
      dnsConfig:
        options:
        - name: ndots
          value: "3"
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: teritori-dapp-backend
  annotations:
spec:
  selector:
    app: teritori-dapp-backend
  ports:
  - name: http
    port: 80
    targetPort: 9090
  - name: https
    port: 443
    targetPort: 9090
