kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/hostname: back.YOUR_DOMAIN
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: teritori-dapp-backend
spec:
  ingressClassName: nginx
  rules:
  - host: back.YOUR_DOMAIN
    http:
      paths:
      - backend:
          service:
            name: teritori-dapp-backend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - back.YOUR_DOMAIN
    secretName: teritori-dapp-backend-tls
